--- a/index.ipynb
+++ b/index.ipynb
@@ -255,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -271,19 +271,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'name': 'Friends',\n",
-       " 'genre': 'sitcom',\n",
-       " 'no_of_seasons': 10,\n",
-       " 'no_of_episodes': 236}"
+       "{'name': 'Friends', 'genre': 'sitcom', 'no_of_seasons': 10}"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -308,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
